[package]
name = "jplaw_text"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Naoki Kaneko <puripuri2100@gmail.com>"]
repository = "https://github.com/japanese-law-analysis/jplaw_text"
description = "e-govで公開されている条例XMデータから指定された条項のテキストを取得するためのライブラリ"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding_rs = "0.8.31"
mecab = "0.1.5"
quick-xml = { version = "0.26.0", features = ["async-tokio", "encoding"] }
serde = { version = "1.0.147", features = ["derive"] }
thiserror = "1.0.37"
tokio = { version ="1.22.0", features = ["full"] }
tokio-stream = "0.1.11"

[dev-dependencies]
tokio = {version="1.22.0", features=["macros", "rt"]}
